[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/TileSet/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=1]
[ext_resource path="res://src/Wizard/Script/DumbWizzardScript.gd" type="Script" id=2]
[ext_resource path="res://assets/TileSet/frames/weapon_red_magic_staff.png" type="Texture" id=3]
[ext_resource path="res://assets/Effect/Light/LightEffect.png" type="Texture" id=4]
[ext_resource path="res://assets/Effect/ShadowEffect.png" type="Texture" id=5]
[ext_resource path="res://assets/NormalMap/DungeonNormalMap_n.png" type="Texture" id=6]
[ext_resource path="res://assets/Effect/CircleEffect.png" type="Texture" id=7]
[ext_resource path="res://assets/Effect/DustParticles.tres" type="Material" id=8]
[ext_resource path="res://assets/Shaders/FlashingShader.tres" type="Material" id=9]
[ext_resource path="res://src/Player/Script/PlayerHealthBarScript.gd" type="Script" id=10]
[ext_resource path="res://assets/Sound/Magic/Spell1.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/Sound/Misc/Explosion9.wav" type="AudioStream" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 160, 160, 16, 32 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.435294, 0.286275, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0865384 ), 0.315432, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 20.0
angle = 45.0
angle_random = 1.0
scale = 1.5
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0288461 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.0
initial_velocity_random = 0.4
angular_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 0.2
scale_curve = SubResource( 9 )
color = Color( 1, 1, 1, 0.34902 )

[sub_resource type="CircleShape2D" id=11]
radius = 112.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=13]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("../SpriteContainer/WizzardSprite:material:shader_param/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/HealthBarNode:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/WizzardSprite:material:shader_param/whitening")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteContainer/MagicWand/LightEffect:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_do_decrease_enemy"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ExplosionParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("AudioNodes/ExplosionSoundEffect")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0.5 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpriteContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/WizzardSprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 128, 160, 16, 32 ), Rect2( 144, 160, 16, 32 ), Rect2( 160, 160, 16, 32 ), Rect2( 176, 160, 16, 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteContainer/WizzardSprite:normal_map:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 128, 160, 16, 32 ), Rect2( 144, 160, 16, 32 ), Rect2( 160, 160, 16, 32 ), Rect2( 176, 160, 16, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteContainer/MagicWand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 5, -1 ), Vector2( 5, 0 ), Vector2( 5, 1 ), Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=17]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.15, 1 ), Vector2( 1, 1 ), Vector2( 1.15, 1 ), Vector2( 1.3, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/WizzardSprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 192, 160, 16, 32 ), Rect2( 208, 160, 16, 32 ), Rect2( 224, 160, 16, 32 ), Rect2( 240, 160, 16, 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteContainer/WizzardSprite:normal_map:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 192, 160, 16, 32 ), Rect2( 208, 160, 16, 32 ), Rect2( 224, 160, 16, 32 ), Rect2( 240, 160, 16, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteContainer/MagicWand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 5, 0 ), Vector2( 5, -1 ), Vector2( 5, 0 ), Vector2( 5, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleAnimation"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "WalkingAnimation"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=25]
states/Dead/node = SubResource( 18 )
states/Dead/position = Vector2( 598, 216 )
states/Idle/node = SubResource( 19 )
states/Idle/position = Vector2( 457, 100 )
states/Walking/node = SubResource( 20 )
states/Walking/position = Vector2( 755, 100 )
transitions = [ "Idle", "Walking", SubResource( 21 ), "Walking", "Idle", SubResource( 22 ), "Idle", "Dead", SubResource( 23 ), "Walking", "Dead", SubResource( 24 ) ]
start_node = "Idle"
end_node = "Dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[node name="DumbWizzardNode" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
speed = 20.0
acceleration = 2.0
deceleration = 1.0

[node name="TimerNode" type="Node" parent="."]

[node name="PlayerOutsideAreaTimer" type="Timer" parent="TimerNode"]
process_mode = 0
wait_time = 10.0

[node name="IncreaseHealth" type="Timer" parent="TimerNode"]

[node name="DelayHealth" type="Timer" parent="TimerNode"]
wait_time = 3.0

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="HealthBarNode" type="Node2D" parent="SpriteContainer"]
material = SubResource( 1 )
position = Vector2( 0, -6 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 10 )
parent_node_nodepath = NodePath("../..")
health_timer_nodepath = NodePath("../../TimerNode/IncreaseHealth")
health_delay = NodePath("../../TimerNode/DelayHealth")

[node name="HealthBarOne" type="Sprite" parent="SpriteContainer/HealthBarNode"]
use_parent_material = true
position = Vector2( -22.5, 1.90735e-06 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 256, 16, 16 )

[node name="HealthBarTwo" type="Sprite" parent="SpriteContainer/HealthBarNode"]
use_parent_material = true
position = Vector2( -7.5, 9.53674e-07 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 256, 16, 16 )

[node name="HealthBarThree" type="Sprite" parent="SpriteContainer/HealthBarNode"]
use_parent_material = true
position = Vector2( 7.5, 9.53674e-07 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 256, 16, 16 )

[node name="HealthBarFour" type="Sprite" parent="SpriteContainer/HealthBarNode"]
use_parent_material = true
position = Vector2( 22.5, 1.90735e-06 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 288, 256, 16, 16 )

[node name="ShadowSprite" type="Sprite" parent="SpriteContainer"]
self_modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 0, 16 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 5 )

[node name="DustParticles" type="Particles2D" parent="SpriteContainer"]
position = Vector2( 0, 13 )
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
speed_scale = 0.2
randomness = 1.0
local_coords = false
process_material = ExtResource( 8 )

[node name="WizzardSprite" type="Sprite" parent="SpriteContainer"]
material = ExtResource( 9 )
texture = ExtResource( 1 )
normal_map = SubResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 160, 16, 32 )

[node name="MagicWand" type="Node2D" parent="SpriteContainer"]
show_behind_parent = true
position = Vector2( 5, 0 )

[node name="MagicWandSprite" type="Sprite" parent="SpriteContainer/MagicWand"]
texture = ExtResource( 3 )

[node name="MagicSpawnLocation" type="Position2D" parent="SpriteContainer/MagicWand"]
position = Vector2( 0, -11 )

[node name="LightEffect" type="Light2D" parent="SpriteContainer/MagicWand"]
position = Vector2( 0, -11 )
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 0.854902, 0.305882, 0.219608, 1 )
energy = 1.25

[node name="MagicWandParticles" type="Particles2D" parent="SpriteContainer/MagicWand"]
position = Vector2( 0, -11 )
process_material = SubResource( 7 )

[node name="SpellSoundEffect" type="AudioStreamPlayer2D" parent="SpriteContainer/MagicWand"]
position = Vector2( 0, -11 )
stream = ExtResource( 11 )
volume_db = -8.0

[node name="ExplosionParticles" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 0.75
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 7 )

[node name="WizzardDetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="WizzardDetectArea"]
shape = SubResource( 11 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"EnemyHurtBox",
]]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
self_modulate = Color( 0.0941176, 0.929412, 0, 1 )
position = Vector2( 0, 8 )
shape = SubResource( 12 )

[node name="HurtAnimation" type="AnimationPlayer" parent="HurtBox"]
anims/Hurt = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 14 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -32, -32, 64, 64 )
pause_particles = false

[node name="WizardAnimation" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 15 )
anims/IdleAnimation = SubResource( 16 )
anims/WalkingAnimation = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../WizardAnimation")
active = true
parameters/playback = SubResource( 26 )

[node name="AudioNodes" type="Node2D" parent="."]

[node name="ExplosionSoundEffect" type="AudioStreamPlayer2D" parent="AudioNodes"]
stream = ExtResource( 12 )
[connection signal="timeout" from="TimerNode/PlayerOutsideAreaTimer" to="." method="_on_PlayerOutsideAreaTimer_timeout"]
[connection signal="area_entered" from="WizzardDetectArea" to="." method="_on_WizzardDetectArea_area_entered"]
[connection signal="body_entered" from="WizzardDetectArea" to="." method="_on_WizzardDetectArea_body_entered"]
[connection signal="body_exited" from="WizzardDetectArea" to="." method="_on_WizzardDetectArea_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
